--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 
 :root {
   --main-font: "Work Sans", sans-serif;
+  --black-theme: black;
 }
 
 * {
@@ -12,5 +13,5 @@
 }
 
 body {
-  background-color: black;
+  background-color: var(--black-theme);
 }
