--- a/src/App.css
+++ b/src/App.css
@@ -14,4 +14,22 @@
 
 body {
   background-color: var(--black-theme);
+  
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #eee;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #00ab00;
+  border-radius: 15px;
+
 }
